--- a/styles.css
+++ b/styles.css
@@ -141,10 +141,16 @@ main{
     background-color: #333;
     
 }
+main a{
+    position: absolute;
+    left: 70%;
+    transform: translate(0%,-30px);
+    
+}
 
 article img{
-    width: 600px;
-    height: 150px;
+    width: 25rem;
+    height: 6.25rem;
     object-fit: cover;
     border-radius: 15px;
 }
